--- a/src/less/global.less
+++ b/src/less/global.less
@@ -2,3 +2,8 @@ h1 {
     color: @dark-red;
     .text-shadow;
 }
+
+.fluid-container {
+    margin-left: 15px;
+    margin-right: 15px;
+}
